--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -65,17 +65,25 @@ th{
 }
 */
 .note-image{
-    padding-top: 30px;
+    position: absolute;
+    padding-left: 5px;
+    padding-top: 0px;
 }
 .note-image2{
     position: absolute;
-    padding-top: 20px;
+    padding-top: 0px;
+    
 }
+
 .img-note{
     max-height: 82px;
 }
 .img-note2{
     max-height: 113px;
+}
+.note-image2 img{
+    width: 90px;
+    height: 90px;
 }
 body{
     background-color: #F3EEFE;
