--- a/src/app/objectives/goals/goals.component.html
+++ b/src/app/objectives/goals/goals.component.html
@@ -67,13 +67,13 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col">
-                                <img src="./assets/images/globe.png" alt="">
+                                <img [src]="getImagePath(goal.goalName)" alt="" class="images">
                             </div>
                             <div class="col">
                                 <span class="triptext">{{goal.goalName}}</span><br>
-                                <span class="triptext">{{goal.duration}}</span><br>
+                                <span class="triptext">{{goal.duration | date:'yyyy-MM-dd' }}</span><br>
                                 <span class="triptext">$4000</span>&nbsp;
-                                <span class="triptext">$200000</span><br>
+                                <span class="triptext">${{goal.financialGoalValue}}</span><br>
                                 <div class="progress" style="height: 5px;">
                                     <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
                                         aria-valuemin="0" aria-valuemax="100"></div>
