--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -26,12 +26,10 @@
 
     <div class="row ">
         <div class="col2">
-            <b style="font-size: 20px;margin-left: 10px;">High Risk</b>
+            <b>High Risk</b>
 
             <div class="dropdown">
-                <img class="image-container"
-                    style="height:30px;width:30px;cursor:pointer;position: absolute;left:250px;bottom: 0;top: -20px;"
-                    src="assets/images/filter.png">
+                <img class="image-container" src="assets/images/filter.png">
                 <div class="dropdown-content">
                     <a>Yearly View</a>
 
@@ -70,11 +68,9 @@
 
     <div class="row ">
         <div class="col2">
-            <b style="font-size: 20px;margin-left: 10px;">Medium Risk</b>
+            <b>Medium Risk</b>
             <div class="dropdown">
-                <img class="image-container"
-                    style="height:30px;cursor:pointer;position: absolute;left:220px;bottom: 0;top: -20px;"
-                    src="assets/images/filter.png">
+                <img class="image-container1" src="assets/images/filter.png">
                 <div class="dropdown-content">
                     <a>Yearly View</a>
 
@@ -100,10 +96,10 @@
     </div>
     <div class="row ">
         <div class="col2">
-            <b style="font-size: 20px;margin-left: 10px;">Low Risk</b>
+            <b>Low Risk</b>
             <div class="dropdown">
-                <div class="image-container">
-                    <img style="height:30px;cursor:pointer;position: absolute;left:250px;bottom: 0;top: -20px;"
+                <div class="image-container-set2">
+                    <img style="height:30px;cursor:pointer;position: absolute;left:270px;bottom: 0;top: -20px;"
                         src="assets/images/filter.png">
                 </div>
                 <div class="dropdown-content">
@@ -144,14 +140,14 @@
     <hr>
 
 
-    <div style="display: flex; gap: 45px;margin-top: 30px;align-items: center;height:30px">
+    <div class="image-container-set1">
         <img src="assets/images/funds.png" alt="Funds">
         <img src="assets/images/Allocation.png" alt="Allocation">
         <img src="assets/images/History.png" alt="History">
         <img src="assets/images/performance.png" alt="Performance">
 
     </div>
-    <div style="display:flex;gap: 58px;font-size: 13px;margin-left: 10px;margin-top: 20px;">
+    <div class="image-text">
         <p>Funds</p>
         <p>Allocation</p>
         <p>History</p>
@@ -165,26 +161,26 @@
 
 
 
-    <h5 style="font-size:25px;margin-left: 15px;">Goal Setting</h5>
+    <h5>Goal Setting</h5>
     <div class="card-body">
 
-        <h2 style="margin-left:10px ;margin-top: 10px;">Long term</h2>
-        <div style="display:flex ;">
+        <h2>Long term</h2>
+        <div class="long-term">
             <p style="margin-left:10px ;">Equity Investment </p>
-            <p style="margin-left: 130px;font-size:18px;color:#483699;"><b>70%</b></p>
+            <p class="seventy" style="margin-left: 150px;"><b>70%</b></p>
         </div>
-        <hr style="width:320px">
+        <hr>
 
-        <h2 style="margin-left:10px ;margin-top: 10px;">Short term</h2>
-        <div style="display:flex ;">
+        <h2>Short term</h2>
+        <div class="short-term">
             <p style="margin-left:10px ;">Debt,Liquid funds, G sec</p>
-            <p style="margin-left: 77px;font-size:18px;color:#483699;"><b>20%</b></p>
+            <p class="twenty" style="margin-left: 101px"><b>20%</b></p>
         </div>
-        <hr style="width:320px">
-        <h2 style="margin-left:10px ;margin-top: 10px;">Medium term</h2>
-        <div style="display:flex ;">
+        <hr>
+        <h2>Medium term</h2>
+        <div class="medium-term">
             <p style="margin-left:10px ;">Mutual funds,FD</p>
-            <p style="margin-left: 130px;font-size:18px;color:#483699;"><b>10%</b></p>
+            <p class="ten" style="margin-left: 155px;"><b>10%</b></p>
         </div>
 
 
