dashboard circular plugins

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -215,5 +215,14 @@
             </div>
         </div>
     </div>
+    
+</div>
+<div class="card-toggle">
+    <div class="card-content">
+        <img src="assets/images/dashboardhome.png">
+
+        <img routerLink="/portfolio" src="assets/images/dashboardgraph.png">
+        <img src="assets/images/dashboardtarget.png">
+    </div>
 </div>
 </body>
