some code modified

--- a/src/app/layout/login-header/login-header.component.html
+++ b/src/app/layout/login-header/login-header.component.html
@@ -16,7 +16,7 @@
 
 <div>
 
-    <button class="signup-button">Sign Up</button>
+    <button class="signup-button" routerLink='/signup'>Sign Up</button>
 
 </div>
 
