--- a/src/app/modules/portfolio/portfolio.component.scss
+++ b/src/app/modules/portfolio/portfolio.component.scss
@@ -179,8 +179,8 @@ hr {
     margin-left: 130px;
     position: fixed;
     bottom: 50px;
-    height: 50px;
-    width: fit-content;
+    height: 70px;
+    width: 165px;
     border-radius: 30px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
