--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -192,7 +192,8 @@
 
     <div class="card">
         <div class="card-content">
-            <img routerLink="/dashboard" src="assets/images/home.png">
+            <img routerLink="/dashboard" src="assets/images/home2.jpg">
+
             <img src="assets/images/graph.png">
             <img src="assets/images/target.png">
         </div>
