--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <div class="header">
         <div class="profile">
             <img src ="/assets/images/profile.png" alt ="profile pic" style="float:right">
-            <img src ="/assets/images/notificationbell.png" alt ="profile pic" style="float:right">
+            <img routerLink="/notifications" src ="/assets/images/notificationbell.png" alt ="profile pic" style="float:right">
             
         </div>
         <h3>Hello {{name}}</h3>    
