notification, dashboard, login component changes

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 <div class = "top">
     <div class="header">
         <div class="profile">
-            <img src ="/assets/images/profile.png" alt ="profile pic" style="float:right">
+            <img src ="/assets/images/profile.png" alt ="profile pic" style="float:right; margin-left: 10px;">
             <img routerLink="/notifications" src ="/assets/images/notificationbell.png" alt ="profile pic" style="float:right">
             
         </div>
