--- a/src/app/modules/notifications/notifications.component.scss
+++ b/src/app/modules/notifications/notifications.component.scss
@@ -14,10 +14,14 @@ span{
     padding-top: 0px;
     
 }
+.notifications{
+    width:412px ;
+    padding-left: 19px;
+}
 
 body{
-    background-color: #F3EEFE;
-    background-image: linear-gradient(#F3EEFE, #C391EE);
+   // background-color: #F3EEFE;
+    //background-image: linear-gradient(#F3EEFE, #C391EE);
     width: 412px;
     height: 1000px;
 }
@@ -29,10 +33,35 @@ body{
     
 }
 .row{
-    padding: 22px;
-    background-color:#C391EE;
+    padding: 8px;
     max-width: 412px;
     border-radius: 5px;
     box-shadow: black;
+    border-style:ridge;
+}
+.right-content {
+    float: right; /* Float the span to the right */
+    /* Optionally, you can add more styling for the right content */
+  }
+  .card-toggle{
+    margin-left: 130px;
+    position: fixed;
+    bottom: 50px;
+    height: 60px;
+    width: 150px;
+    border-radius: 30px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+   // background-color: white;
 }
 
+ 
+.card-content {
+    display: flex;
+    flex-direction: row;
+}
+ 
+.card-toggle img {
+    margin: 10px; 
+}
