--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="card1" style="margin-top:20px">
-                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;">85%</span>
+                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;margin-top:30px">85%</span>
                     <p style="margin-top: 40px;color: #FFFFFF;">cost</p>
                 </div>
                 <span style="color: #2CFF41;">Increase in Average</span>
@@ -80,7 +80,7 @@
 
 
             <div class="card1" style="margin-top:20px">
-                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;">65%</span>
+                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;margin-top:30px">65%</span>
                     <p style="margin-top: 40px;color: #FFFFFF;">cost</p>
                 </div>
                 <span style="color: #2CFF41;">Increase in Average</span>
@@ -99,7 +99,7 @@
             <b>Low Risk</b>
             <div class="dropdown">
                 <div class="image-container-set2">
-                    <img style="height:30px;cursor:pointer;position: absolute;left:270px;bottom: 0;top: -20px;"
+                    <img style="height:40px;cursor:pointer;position: absolute;left:250px;bottom: 0;top: -20px;"
                         src="assets/images/filter.png">
                 </div>
                 <div class="dropdown-content">
@@ -120,7 +120,7 @@
             </div>
 
             <div class="card1" style="margin-top: 20px;">
-                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;">56%</span>
+                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;margin-top:30px">56%</span>
                     <p style="margin-top: 40px;color: #FFFFFF;">cost</p>
                 </div>
                 <span style="color: #2CFF41;">Increase in Average</span>
@@ -167,20 +167,20 @@
         <h2>Long term</h2>
         <div class="long-term">
             <p style="margin-left:10px ;">Equity Investment </p>
-            <p class="seventy" style="margin-left: 150px;"><b>70%</b></p>
+            <p class="seventy" style="margin-left: 190px;"><b>70%</b></p>
         </div>
         <hr>
 
         <h2>Short term</h2>
         <div class="short-term">
             <p style="margin-left:10px ;">Debt,Liquid funds, G sec</p>
-            <p class="twenty" style="margin-left: 101px"><b>20%</b></p>
+            <p class="twenty" style="margin-left: 150px"><b>20%</b></p>
         </div>
         <hr>
         <h2>Medium term</h2>
         <div class="medium-term">
             <p style="margin-left:10px ;">Mutual funds,FD</p>
-            <p class="ten" style="margin-left: 155px;"><b>10%</b></p>
+            <p class="ten" style="margin-left: 195px;"><b>10%</b></p>
         </div>
 
 
