--- a/src/app/modules/portfolio/portfolio.component.scss
+++ b/src/app/modules/portfolio/portfolio.component.scss
@@ -154,7 +154,7 @@ hr {
     border-style: inset;
 
     margin-top: 15px;
-    height: 250px;
+    height: 280px;
     counter-set: right;
     width: 380px;
     border-radius: 20px;
@@ -201,29 +201,29 @@ hr {
 
 }
 
-.row .col2 .b {
+.row .col2 b {
     font-size: 20px;
     margin-left: 10px;
-    margin-top: 20px;
+    margin-top: 40px;
 
 }
 
 
 .image-container {
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    // width: 30px;
     cursor: pointer;
     position: absolute;
-    left: 280px;
+    left: 250px;
     bottom: 0;
     top: -20px;
 }
 
 .image-container1 {
-    height: 30px;
+    height: 40px;
     cursor: pointer;
     position: absolute;
-    left: 250px;
+    left: 220px;
     bottom: 0;
     top: -20px;
 }
