--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="card1" style="margin-top:20px">
-                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;margin-top:30px">85%</span>
+                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;">85%</span>
                     <p style="margin-top: 40px;color: #FFFFFF;">cost</p>
                 </div>
                 <span style="color: #2CFF41;">Increase in Average</span>
@@ -80,7 +80,7 @@
 
 
             <div class="card1" style="margin-top:20px">
-                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;margin-top:30px">65%</span>
+                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;">65%</span>
                     <p style="margin-top: 40px;color: #FFFFFF;">cost</p>
                 </div>
                 <span style="color: #2CFF41;">Increase in Average</span>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="card1" style="margin-top: 20px;">
-                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;margin-top:30px">56%</span>
+                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;">56%</span>
                     <p style="margin-top: 40px;color: #FFFFFF;">cost</p>
                 </div>
                 <span style="color: #2CFF41;">Increase in Average</span>
