changes of package.json & styles.scss

--- a/src/app/modules/setting-password/setting-password.component.html
+++ b/src/app/modules/setting-password/setting-password.component.html
@@ -1,13 +1,20 @@
 
 <div>
-    <!-- <app-login-header></app-login-header> -->
+  <div class="login-app-container">
+    <img src="../../../assets/images/person.png" />
+    <img src="../../../assets/images/bank.png" class="img-bank"/>
+    <img src="../../../assets/images/money.png" class="img-money"/>
+    <img src="../../../assets/images/note.png" class="img-note"/>
+    <img src="../../../assets/images/path.svg" class="img-path"/>
+    <img src="../../../assets/images/line.svg" class="img-line" />
+ </div>
     <h1>New Password</h1>
     <h3>New Password</h3>
   
     <form (ngSubmit)="setNewPassword()">
       <mat-form-field>
         <mat-label>New password</mat-label>
-        <input matInput [(ngModel)]="newPassword" name="newPassword" type="password" required>
+        <input matInput [(ngModel)]="newPassword" name="newpassword" type="password" required>
       </mat-form-field>
   
       <div>
