--- a/src/app/otp/otp.component.scss
+++ b/src/app/otp/otp.component.scss
@@ -21,7 +21,7 @@ body {
 h1 {
     font-size: 24px;
     margin-bottom: 20px;
-    margin-top: 450px;
+    margin-top: 150px;
     margin-left: 20p;
 }
 
@@ -86,3 +86,73 @@ label{
 
 
 
+
+.login-app-container{
+    display: none;
+}
+@media (min-width: 412px) and (max-width:892px){
+    .login-app-container{
+        display: block;
+    }
+    .img-path{
+        position: absolute;
+        z-index: -1;
+        top: 80px;
+        left: 25px;
+    }
+    .img-money{
+        position: absolute;
+        top: 55px;
+        right: 0;
+        width: 25%;
+    }
+    .img-bank{
+        position: absolute;
+        top: 50px;
+        left: 10px;
+        width: 30%;
+    }
+    .img-note{
+        position: absolute;
+        top: 300px;
+        width: 20%;
+        left: 90px;
+    }
+    .img-line{
+        position: absolute;
+        top: 56px;
+        left: 123px;
+        width: 47%;
+    }
+}
+
+
+.form-control{
+    margin-bottom: 15px;
+    border: white;
+}
+.form-control-button{
+    padding-left: 45px;
+    padding-right: 45px;
+   padding-top: 150px;
+   padding-bottom: 13px;
+}
+.form-control-details{
+    color: rgba(72, 54, 153, 1);
+}
+input[type=text]{
+    border: none;
+    border-bottom: 1px solid rgba(102, 102, 102, 1);
+}
+.footer{
+    text-align: center;  
+    a{
+        text-decoration: none;
+        color: rgba(72, 54, 153, 1);
+        margin-bottom: 48px;
+
+    }
+    .footer-details{
+        padding-bottom: 48px;
+    }
+}        
