--- a/src/app/modules/setting-password/setting-password.component.html
+++ b/src/app/modules/setting-password/setting-password.component.html
@@ -4,10 +4,10 @@
   <h3>New Password</h3>
 
   <form (ngSubmit)="setNewPassword()">
-    <mat-form-field>
-      <mat-label>New password</mat-label>
-      <input matInput [(ngModel)]="newPassword" name="newPassword" type="password" required>
-    </mat-form-field>
+
+    <!-- <label>New password</label><br> -->
+    <input [(ngModel)]="newPassword" name="newPassword" type="password" required>
+
 
     <div>
       <button type="submit" class="proceed-button">Proceed</button>
