--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -29,7 +29,7 @@
     <div class="form-control1">
         <div class="form-signup">
         Don't have an account? 
-        <a [routerLink]="['/signup']" routerLinkActive="router-link-active" >Sign-up</a>
+        <a [routerLink]="['/signUp']" routerLinkActive="router-link-active" >Sign-up</a>
         </div>
     </div>
     </form>
