--- a/src/app/objectives/goals/goals.component.html
+++ b/src/app/objectives/goals/goals.component.html
@@ -71,8 +71,8 @@
                             </div>
                             <div class="col">
                                 <span class="triptext">{{goal.goalName}}</span><br>
-                                <span class="triptext">{{goal.duration | date:'yyyy-MM-dd' }}</span><br>
-                                <span class="triptext">$4000</span>&nbsp;
+                                <span class="triptext">{{goal.duration | date:'yyyy' }}</span><br>
+                                <span class="triptext">$0</span>&nbsp;
                                 <span class="triptext">${{goal.financialGoalValue}}</span><br>
                                 <div class="progress" style="height: 5px;">
                                     <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
