--- a/src/app/fund-managment/fund/fund.component.html
+++ b/src/app/fund-managment/fund/fund.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <label for="dropdown2">Fund Type:</label>
-            <select formControlName="dropdown2">
+            <select formControlName="dropdown2" (change)="onFundSelection($event)">
                 <option [value]="fund.fundName" *ngFor="let fund of dropDownValue">{{ fund.fundName }}</option>
             </select>
         </div>
