--- a/src/app/layout/login-header/login-header.component.html
+++ b/src/app/layout/login-header/login-header.component.html
@@ -1,24 +1,24 @@
 <div class="login-app-container">
-   <img src="../../../assets/images/person.png" />
-   <img src="../../../assets/images/bank.png" class="img-bank"/>
-   <img src="../../../assets/images/money.png" class="img-money"/>
-   <img src="../../../assets/images/note.png" class="img-note"/>
-   <img src="../../../assets/images/path.svg" class="img-path"/>
-   <img src="../../../assets/images/line.svg" class="img-line" />
+    <img src="../../../assets/images/person.png" />
+    <img src="../../../assets/images/bank.png" class="img-bank" />
+    <img src="../../../assets/images/money.png" class="img-money" />
+    <img src="../../../assets/images/note.png" class="img-note" />
+    <img src="../../../assets/images/path.svg" class="img-path" />
+    <img src="../../../assets/images/line.svg" class="img-line" />
 </div>
 <div class="buttons">
     <button class="login-button">
-    <a [routerLink]="['/login']" routerLinkActive="router-link-active" >Log In</a>
+        <a [routerLink]="['/login']" routerLinkActive="router-link-active">Log In</a>
     </button>
-   
-        
-       
 
-<div>
 
-    <button class="signup-button" routerLink='/signup'>Sign Up</button>
 
-</div>
+
+    <div>
+
+        <button class="signup-button" routerLink='/signUp'>Sign Up</button>
+
+    </div>
 
 </div>
 
