--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -115,12 +115,11 @@
                         <div class="col">
                             <img src="./assets/images/globe.png" alt="" style="float: left;" class="globe">
                         </div>
-                        <div class="col">
+                        <div class="col" >
                             <span class="triptext" style="font-weight: bold;">Trip to Maldives</span><br>
                             <span class="triptext">2024</span><br>
-                            <span class="triptext">$0</span>&nbsp;
+                            <span class="triptext">$0</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <span class="triptext">$200000</span><br>
-
                             <div class="progress" style="height: 5px;">
                                 <div class="progress-bar" role="progressbar" style="width: 0%; padding-left: 5px;"
                                     aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -160,7 +159,7 @@
                         <div class="col">
                             <span class="triptext" style="font-weight: bold;">Ford Ranger</span><br>
                             <span class="triptext">2030</span><br>
-                            <span class="triptext">$0</span>&nbsp;
+                            <span class="triptext">$0</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <span class="triptext">$200000</span><br>
                            
                             <div class="progress" style="height: 5px;">
@@ -176,19 +175,13 @@
 
 
     </div>
-    <div class="card-toggle">
-        <div class="card-content">
-            <img src="assets/images/dashboardhome.png">
-    <div class="card-toggle">
-        <div class="card-content">
-            <img src="assets/images/dashboardhome.png">
-
-            <img routerLink="/portfolio" src="assets/images/dashboardgraph.png">
-            <img src="assets/images/dashboardtarget.png">
-        </div>
-    </div>
-            <img routerLink="/portfolio" src="assets/images/dashboardgraph.png">
-            <img src="assets/images/dashboardtarget.png">
-        </div>
-    </div>
+      
+            <div class="card-toggle">
+                <div class="card-content">
+                    <img src="assets/images/activehome.png">
+                     <img routerLink="/portfolio" src="assets/images/inactivegraph.png">
+                    <img routerLink ="/goals/short-term" src="assets/images/inactivetarget.png">
+                </div>
+            </div>
+   
 </body>
