--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -99,6 +99,7 @@ body{
 .card{
     max-width: 400px;
     padding: 5px;
+   margin-bottom: 10px;
 }
 .row{
     padding:5px;
@@ -106,11 +107,8 @@ body{
     width: 400px;
 }
 .row1{
-    
     background-color: #c6bbf3;
-    padding-top: 10px;
-    padding-bottom: 20px;
-    padding-right: 20px;
+    padding:10px;
     
 }
 .triptext {
@@ -126,7 +124,7 @@ body{
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
-   // background-color: white;
+   background-color: white;
 }
 
  
@@ -139,8 +137,10 @@ body{
     margin: 10px; 
 }
 .col{
-    padding-right: 0px;
+    padding-right: 20px;
+   //padding-left: 20px;
 }
+
  
  
 
