--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -192,10 +192,10 @@
 
     <div class="card">
         <div class="card-content">
-            <img routerLink="/dashboard" src="assets/images/home2.jpg">
+            <img routerLink="/dashboard" src="assets/images/inactivehome.png">
 
             <img src="assets/images/graph.png">
-            <img src="assets/images/target.png">
+            <img routerLink="/goals/short-term" src="assets/images/inactivetarget.png">
         </div>
     </div>
 </div>
