--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -141,7 +141,7 @@
 
 
     <div class="image-container-set1">
-        <img src="assets/images/funds.png" alt="Funds">
+        <img routerLink="/fund" src="assets/images/funds.png" alt="Funds">
         <img src="assets/images/Allocation.png" alt="Allocation">
         <img src="assets/images/History.png" alt="History">
         <img src="assets/images/performance.png" alt="Performance">
