--- a/src/app/objectives/goal-setting/goal-setting.component.scss
+++ b/src/app/objectives/goal-setting/goal-setting.component.scss
@@ -64,6 +64,11 @@
     left: 200px;
 }
 
+.tab {
+    width: 360px;
+    height: 80px;
+}
+
 .skipbutton {
     background-color: white;
     border: none;
