--- a/src/app/fund-managment/fund/fund.component.html
+++ b/src/app/fund-managment/fund/fund.component.html
@@ -1,20 +1,30 @@
 <div class="mobile-container">
+
+
+    <img src="../../../assets/images/person.png" />
+    <img src="../../../assets/images/bank.png" class="img-bank" />
+    <img src="../../../assets/images/money.png" class="img-money" />
+    <img src="../../../assets/images/note.png" class="img-note" />
+    <img src="../../../assets/images/path.svg" class="img-path" />
+    <img src="../../../assets/images/line.svg" class="img-line" />
+
+    <h3>Add Funds</h3>
     <form [formGroup]="fundForm" (ngSubmit)="onSubmit()">
         <div class="row">
-            <label for="dropdown1">Transaction Type:</label>
+            <label style="margin-top: 60px;" for="dropdown1">Transaction Type:</label>
             <select formControlName="dropdown1">
                 <option value="Deposit">Deposit</option>
                 <option value="Withdrawal">Withdrawal</option>
             </select>
-        </div>
+        </div><br>
         <div class="row">
-            <label for="dropdown2">Fund Type:</label>
+            <label for="dropdown2">Fund Type:</label><br>
             <select formControlName="dropdown2" (change)="onFundSelection($event)">
                 <option [value]="fund.fundName" *ngFor="let fund of dropDownValue">{{ fund.fundName }}</option>
             </select>
-        </div>
+        </div><br>
         <div class="row">
-            <label for="numberInput">Number Input:</label>
+            <label for="numberInput">Number Input:</label><br>
             <input type="number" id="numberInput" formControlName="numberInput">
         </div>
         <button type="submit" [disabled]="fundForm.invalid">Submit</button>
