--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -3,8 +3,9 @@
         <div class="top">
             <div class="header">
                 <div class="profile">
-                    <img src ="/assets/images/profile.png" alt ="profile pic" style="float:right; margin-left: 10px;">
-                    <img routerLink="/notifications" src ="/assets/images/notificationbell.png" alt ="profile pic" style="float:right">
+                    <img src="/assets/images/profile.png" alt="profile pic" style="float:right; margin-left: 10px;">
+                    <img routerLink="/notifications" src="/assets/images/notificationbell.png" alt="profile pic"
+                        style="float:right">
 
                 </div>
                 <h3>Hello {{name}}</h3>
@@ -18,7 +19,7 @@
                     <th> Total goals</th>
                 </tr>
                 <tr style="text-align: center;">
-                    <td><a routerLink="/addfunds">+Add funds</a></td>
+                    <td><a routerLink="/fund">+Add funds</a></td>
                     <td>$0.00</td>
                     <td>{{numberOfGoals}}</td>
                 </tr>
@@ -136,10 +137,11 @@
                             <img src="./assets/images/home.png" alt="" style="float: left; width:100px">
                         </div>
                         <div class="col">
-                            <span class="triptext" style="font-style: roboto; font-size: medium; font-weight: bold;">Renovate
+                            <span class="triptext"
+                                style="font-style: roboto; font-size: medium; font-weight: bold;">Renovate
                                 Home</span><br>
                             <span class="triptext">2025</span><br>
-                            <span class="triptext">$0</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <span class="triptext">$0</span>&nbsp;
                             <span class="triptext">$200000</span><br>
 
                             <div class="progress" style="height: 5px;">
@@ -162,12 +164,12 @@
                             <span class="triptext">2030</span><br>
                             <span class="triptext">$0</span>&nbsp;
                             <span class="triptext">$200000</span><br>
-                           
+
                             <div class="progress" style="height: 5px;">
                                 <div class="progress-bar" role="progressbar" style="width: 0%; padding-left: 5px;"
                                     aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                        
+
                         </div>
                     </div>
                 </div>
@@ -179,14 +181,7 @@
     <div class="card-toggle">
         <div class="card-content">
             <img src="assets/images/dashboardhome.png">
-    <div class="card-toggle">
-        <div class="card-content">
-            <img src="assets/images/dashboardhome.png">
 
-            <img routerLink="/portfolio" src="assets/images/dashboardgraph.png">
-            <img src="assets/images/dashboardtarget.png">
-        </div>
-    </div>
             <img routerLink="/portfolio" src="assets/images/dashboardgraph.png">
             <img src="assets/images/dashboardtarget.png">
         </div>
