--- a/src/app/objectives/goal-onboarding/goal-onboarding.component.html
+++ b/src/app/objectives/goal-onboarding/goal-onboarding.component.html
@@ -28,7 +28,7 @@
             <p>Financial goal value</p>
         </div>
         <div>
-            <input class="three" type="number" [(ngModel)]="financialGoalValue" placeholder="5000000">
+            <input class="three" type="number" [(ngModel)]="financialGoalValue" placeholder="0">
         </div>
         <button type="button" class="btn" (click)="save()">Save</button>
         <!-- <button class="accountbutton" type="submit" (click)="addGoalsWithUserId()" routerLink="/goalonboarding">Create Account</button> -->
