--- a/src/app/objectives/goal-setting/goal-setting.component.html
+++ b/src/app/objectives/goal-setting/goal-setting.component.html
@@ -5,6 +5,8 @@
         <img src="./assets/images/bank.png" alt="" class="img3">
         <img src="./assets/images/hand.png" alt="" class="img4">
     </div>
+
+    <img src="./assets/images/tab.png" alt="" class="tab">
     <h3>Final Steps!</h3><br>
     <p style="color:#483699 ;">Current goals recommended for you. <br> Tap on 5 goals to proceed ahead</p>
     <div class="container">
