--- a/src/app/objectives/goals/goals.component.html
+++ b/src/app/objectives/goals/goals.component.html
@@ -75,7 +75,7 @@
                                 <span class="triptext">$0</span>&nbsp;
                                 <span class="triptext">${{goal.financialGoalValue}}</span><br>
                                 <div class="progress" style="height: 5px;">
-                                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="0"
+                                    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0"
                                         aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
@@ -135,6 +135,16 @@
                     <p style="padding: none;">travel </p>
                 </div>
             </div>
+        </div>
+    </div>
+
+
+    <div class="card-toggle">
+        <div class="card-content">
+            <img routerLink="/dashboard" src="assets/images/dashboardhome.png">
+
+            <img routerLink="/portfolio" src="assets/images/dashboardgraph.png">
+            <img src="assets/images/dashboardtarget.png">
         </div>
     </div>
 
